--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 			</div>
 		</nav>
     </aside>
-<main class="col-9">
+<main class="pr-0 pl-0 border border-warning">
     <section id="aPropos">
         <div class="row">
-            <div class="jumbotron-fluid text-center "><br>            
+            <div class="container-fluid text-center border border warning"><br>            
                 <h1 class="display-4 font-weight-bold">Bonjour! Je me présente,</h1><br>
                     <p class="lead"><p>Je suis actuellement en formation de développement web chez les "Descodeuses" à Paris.</p>
                     <p>Dans le cadre de cette formation, Je suis à la recherche d'un stage en entreprise pour une durée de 6 mois à compter du mois de juillet 2021.</p>
