--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 </head>
 
 <body>
-    <div class="container">
-    <aside class="header text-center col-3">	    
+    <header class="header text-center">	    
 	    <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Emilie Molina</a></h1>
         <nav class="navbar navbar-expand-lg navbar-dark" >
         	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,11 +64,11 @@
                 </div><!--fin div nav-link-->
 			</div>
 		</nav>
-    </aside>
-<main class="pr-0 pl-0 border border-warning">
+    </header>
+    
     <section id="aPropos">
         <div class="row">
-            <div class="container-fluid text-center border border warning"><br>            
+            <div class="jumbotron-fluid text-center offset-3 col-8 col-sm-8"><br>            
                 <h1 class="display-4 font-weight-bold">Bonjour! Je me présente,</h1><br>
                     <p class="lead"><p>Je suis actuellement en formation de développement web chez les "Descodeuses" à Paris.</p>
                     <p>Dans le cadre de cette formation, Je suis à la recherche d'un stage en entreprise pour une durée de 6 mois à compter du mois de juillet 2021.</p>
@@ -89,7 +88,7 @@
           </div>
         </div>
     </section>
-    <section id="competences" class="row d-flex flex-column flex-md-row justify-content-between  col-12 col-md-6 text-center bg-gradient-success border border-light py-3">
+    <section id="competences" class="row d-flex flex-column flex-md-row justify-content-between offset-3 col-12 col-md-6 text-center bg-gradient-success border border-light py-3">
         <div>
             <div class="card-header text-uppercase border-gradient-success mb-3" style = "max-width: 20rem;">Bureautique</div>
             <div class="card-body">
@@ -118,7 +117,7 @@
             </div>
         </div>  
     </section>
-    <section id="diplomes" class="row d-flex flex-column flex-md-row justify-content-between  col-12 col-md-6 text-center bg-info py-3">
+    <section id="diplomes" class="row d-flex flex-column flex-md-row justify-content-between offset-3 col-12 col-md-6 text-center bg-info py-3">
         <div>
         <h2>Diplômes et Formations</h2><br>
         <div class="exp">
@@ -156,8 +155,8 @@
     
     <section id="expe" class="d-flex flex-column flex-md-row justify-content-between mb-5">
         <!-- Experience-->
-        <!-- row  col-8 col-md-8 text-center bg-info border border-light py-3 -->
-        <div class="resume-section   bg-gradient-success" id="experience">
+        <!-- row offset-3 col-8 col-md-8 text-center bg-info border border-light py-3 -->
+        <div class="resume-section offset-3 col-12 col-md-6 bg-gradient-success" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Expériences Professionnelles</h2>
                 <div class="d-flex flex-md-row justify-content-between mb-5">
@@ -216,7 +215,7 @@
         </div>
     </section>
     <section id="langues">
-        <div class=" bg-success  border border-light py-3">
+        <div class="offset-3 bg-success col-12 col-md-6 border border-light py-3">
             <h2>Langues:</h2--><br>
             <p>Français</p>
             <p>Anglais (lu, écrit)</p>
@@ -224,24 +223,23 @@
           </div>
     </section>
     <section id="hobbies">
-        <!-- <div class="container">
-            <div class="row"> -->
-                <h2>Loisirs:</h2><br>
-                <h3>Chantier de Solidarité international - Aout 2005 (Fondation Léo LaGrange)</h3>
-                <p>Aide à la construction d'un Hôpital de campagne près de Cotonou.</p>
-                <h3>Bénévolat dans une association à but non-lucratif (Paris 17e)</h3>
-                <p>Accompagnement de personnes en difficultés (migrants, chômeurs, personnes âgées ... en souffrances).</p>
-            <!-- </div>
-        </div> -->
+        <div class="container">
+            <div class="row">
+                <div class="offset-2 col col-sm-6 justify-content-between">
+                    <h2>Loisirs:</h2><br>
+                    <h3>Chantier de Solidarité international - Aout 2005 (Fondation Léo LaGrange)</h3>
+                    <p>Aide à la construction d'un Hôpital de campagne près de Cotonou.</p>
+                    <h3>Bénévolat dans une association à but non-lucratif (Paris 17e)</h3>
+                    <p>Accompagnement de personnes en difficultés (migrants, chômeurs, personnes âgées ... en souffrances).</p>
+                </div>
+            </div>
+        </div>
     </section>
         <hr class="m-0" />
-    </main>
-    </div>
     <!-- Javascript -->          
     <script src="dev/jquery-3.4.1.min.js"></script>
     <script src="dev/popper.min.js"></script> 
     <script src="dev/bootstrap.min.js"></script> 
     <script src="dev/dark-mode-switch.min.js"></script>
-
 </body>
 </html>
